fix:positon,font and spacing

--- a/task-3/src/app/globals.css
+++ b/task-3/src/app/globals.css
@@ -16,6 +16,8 @@
   }
 }
 
-* {
-  font-family: Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: "Medium";
+  src: local("AirbnbCerealMedium"),
+    url("../app/font/SFPRODISPLAYBLACKITALIC.ttf") format("woff");
 }
